--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </head>
 
   <body>
-    <img src="..." alt="..." class="img-thumbnail">
+    <img src="int08" class="img-thumbnail">
     <!-- Site Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand"><small> 서울대학교 언론정보학과 | 미래뉴스실습 </small></a>
