--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </head>
 
   <body>
-    <img src="int08" class="img-thumbnail">
+
     <!-- Site Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand"><small> 서울대학교 언론정보학과 | 미래뉴스실습 </small></a>
@@ -106,8 +106,11 @@
 
      <h5>
        <p class="big">
-        올림픽 현장에서 선수와 관광객, 해외 취재진이 가장 자주 만나는 사람인 자원봉사자는 '올림픽의 얼굴'이다. 2만 4449명의 자원봉사자가 평창 동계 올림픽·패럴림픽, 더 나아가 2018년 대한민국의 이미지를 결정지었다고 해도 과언이 아니다. 다행히 세계적으로 2018 평창 동계 올림픽과 패럴림픽은 훌륭하게 치러졌다는 평가를 받고 있으며, 해외 취재진은 특히 ‘자원봉사자’들을 대회 성공의 첫 번째 요인으로 꼽곤 했다. ‘젊고’, ‘열정 가득한’ 대한민국의 이미지를 성공적으로 보여준 자원봉사자, 구체적인 데이터를 통해 살펴보자.
+        올림픽 현장에서 선수와 관광객, 해외 취재진이 가장 자주 만나는 사람인 자원봉사자는 '올림픽의 얼굴'이다. 2만 4449명의 자원봉사자가 평창 동계 올림픽·패럴림픽, 더 나아가 2018년 대한민국의 이미지를 결정지었다고 해도 과언이 아니다. 다행히 세계적으로 2018 평창 동계 올림픽과 패럴림픽은 훌륭하게 치러졌다는 평가를 받고 있으며, 해외 취재진은 특히 ‘자원봉사자’들을 대회 성공의 첫 번째 요인으로 꼽곤 했다. 2010년 밴쿠버 올림픽이나 2012년 런던 올림픽과 비교해볼 때, 평창 올림픽의 자원봉사자는 유달리 젊고, 열정적인 이미지를 가지고 있다. 그리고 이러한 이미지는 실제 성공적인 대회 운영으로 이어졌다.
        </p>
+       <p class="big">
+         2018 평창 패럴림픽 공식홈페이지에 올라와 있는 “평창 대회의 ‘숨은 영웅’ 자원봉사자들” 기사 또한 성공적인 대회완성을 위한 원동력으로 자원봉사자를 평가하고 있다. 그러나 원본 기사에서는 손유승 군과 같은 일화적 사례에 집중한 나머지 구체적인 데이터가 부족하다. 해당 기사만으로는 자원봉사자가 이번 대회 운영의 핵심 성공 요인이라는 점을 납득하기 어렵다. 원활한 이해를 돕기 위해 자원봉사자 선발 과정에서의 경쟁률, 올림픽 및 패럴림픽 성별·연령별 분포, 그리고 자원봉사자 이탈률 등의 데이터를 시각적으로 보충해보았다. 지금부터 ‘젊고, 열정적인’ 대한민국의 이미지를 성공적으로 보여준 평창 동계 올림픽· 패럴림픽 자원봉사자를 구체적인 데이터를 통해 살펴보자.
+       </P>
      </h5>
    </div>
 
@@ -142,8 +145,8 @@
 
        <h5>
          <p class="big">
-        2018 평창 동계 올림픽, 패럴림픽에서는 관중 안내와 교통 안내, 숙박, 통역, 시상 등 17개 직종에서 총 2만 2,400명의 자원봉사자를 최종 선발했다. 9만2,500여명이 몰릴 정도로 이번 대회 자원봉사 열기는 국내외적으로 뜨거웠다. 통역 부문의 경우, 17대 1의 경쟁을 보일 정도로 열기가 대단했다. 반면, IT기술의 고도화된 전문인이 필요한 정보기술 직종이나, 야외근무가 불가피한 교통안내의 경우 상대적으로 지원자가 적었다.
-         </p>
+        평창 올림픽·패럴림픽 대회는 자원봉사자 선발 과정부터 시민들의 뜨거운 관심을 받았다. 관중 안내와 교통 안내, 숙박, 통역, 시상 등 17개 직종에서 총 2만 2,400명의 자원봉사자를 최종 선발했는데, 무려 9만2,500여명이 지원했다. 특히 통역 부문의 경우, 490명 모집에 8131명이 1지망으로 지원하여 17대 1의 경쟁을 보일 정도로 열기가 대단했다. 까다로운 선발과정을 거치면서 2018 평창 올림픽·패럴림픽 자원봉사자로서의 자부심이 더욱 커졌을 것으로 분석된다.
+       </p>
        </h5>
      </div>
 
@@ -172,8 +175,8 @@
 
          <h5>
            <p class="big">
-           평창 올림픽, 패럴림픽에 참여한 전체 자원봉사자 1만 8347명 기준, 자원봉사자 중 무려 70.5%(1만2935명)가 여성이다. 기사에서 언급한 바 있듯, 패럴림픽에 참여한 자원봉사자 5195명을 대상으로 할 때에도, 여성이 3천371명(점유율 65%)으로 남성 1천814명(점유율 35%)보다 배 가까이 많음을 알 수 있다.
-           </p>
+            평창 올림픽, 패럴림픽에 참여한 전체 자원봉사자 1만 8347명 기준, 자원봉사자 중 무려 70.5%(1만2935명)가 여성이다. 기사에서 언급된 바 있듯, 패럴림픽에 참여한 자원봉사자 5195명을 대상으로 할 때에도, 여성이 3천371명으로 남성 1천814명보다 배 가까이 많음을 알 수 있다.
+             </p>
            <p class="big">
             연령대별로 따지면 20대 이하가 전체의 83.3%(1만5283명)를 차지한다. 평창의 경우 20대 이하가 전체의 83.3%를 차지하여, 전반적으로 매우 ‘젊은’ 분위기를 연출할 수 있었음을 알 수 있다.
            </p>
@@ -210,13 +213,6 @@
             </h5>
           </div>
           <pre> </pre>
-
-    <pre></pre>
-    <pre></pre>
-
-    <div class="container-fluid">
-      ...
-    </div>
 
 </body>
 </html>
