--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko">
   <head>
-    <title> 2018-1 미래뉴스실습I_백송희 </title>
+    <title> 백송희_2018-1 미래뉴스실습I </title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -103,13 +103,13 @@
 
      <h2>
        <h4> <b> 왜 평창올림픽, 패럴림픽 '자원봉사자'에 주목하는가 </h4> </b>
-
+       <img src="http://image.kmib.co.kr/online_image/2018/0118/201801182210_12210923887293_1.jpg" alt="'젊고, 열정 넘치는'평창 올림픽, 패럴림픽 자원봉사자 사진" height ="400" width="580", align="left">
      <h5>
        <p class="big">
-        올림픽 현장에서 선수와 관광객, 해외 취재진이 가장 자주 만나는 사람인 자원봉사자는 '올림픽의 얼굴'이다. 2만 4449명의 자원봉사자가 평창 동계 올림픽·패럴림픽, 더 나아가 2018년 대한민국의 이미지를 결정지었다고 해도 과언이 아니다. 다행히 세계적으로 2018 평창 동계 올림픽과 패럴림픽은 훌륭하게 치러졌다는 평가를 받고 있으며, 해외 취재진은 특히 ‘자원봉사자’들을 대회 성공의 첫 번째 요인으로 꼽곤 했다. 2010년 밴쿠버 올림픽이나 2012년 런던 올림픽과 비교해볼 때, 평창 올림픽의 자원봉사자는 유달리 젊고, 열정적인 이미지를 가지고 있다. 그리고 이러한 이미지는 실제 성공적인 대회 운영으로 이어졌다.
+        올림픽 현장에서 선수와 관광객, 해외 취재진이 가장 자주 만나는 사람인 자원봉사자는 '올림픽의 얼굴'이다. 2만 4449명의 자원봉사자가 평창 동계 올림픽·패럴림픽, 더 나아가 2018년 대한민국의 이미지를 결정지었다고 해도 과언이 아니다. 다행히 세계적으로 2018 평창 동계 올림픽과 패럴림픽은 훌륭하게 치러졌다는 평가를 받고 있으며, 해외 취재진은 특히 ‘자원봉사자’들을 대회 성공의 첫 번째 요인으로 꼽곤 했다. 2010년 밴쿠버올림픽이나 2012년 런던올림픽과 비교해볼 때, 평창올림픽의 자원봉사자는 유달리 젊고, 열정적인 이미지를 가지고 있다. 그리고 이는 실제 성공적인 대회 운영으로 이어졌다.
        </p>
        <p class="big">
-         2018 평창 패럴림픽 공식홈페이지에 올라와 있는 “평창 대회의 ‘숨은 영웅’ 자원봉사자들” 기사 또한 성공적인 대회완성을 위한 원동력으로 자원봉사자를 평가하고 있다. 그러나 원본 기사에서는 손유승 군과 같은 일화적 사례에 집중한 나머지 구체적인 데이터가 부족하다. 해당 기사만으로는 자원봉사자가 이번 대회 운영의 핵심 성공 요인이라는 점을 납득하기 어렵다. 원활한 이해를 돕기 위해 자원봉사자 선발 과정에서의 경쟁률, 올림픽 및 패럴림픽 성별·연령별 분포, 그리고 자원봉사자 이탈률 등의 데이터를 시각적으로 보충해보았다. 지금부터 ‘젊고, 열정적인’ 대한민국의 이미지를 성공적으로 보여준 평창 동계 올림픽· 패럴림픽 자원봉사자를 구체적인 데이터를 통해 살펴보자.
+         2018 평창 패럴림픽 공식홈페이지에 올라와 있는 “평창 대회의 ‘숨은 영웅’ 자원봉사자들” 기사 또한 성공적인 대회완성을 위한 원동력으로 자원봉사자를 꼽고 있다. 그러나 원본 기사에는 손유승 군과 같은 일화적 사례에 집중한 나머지 구체적인 데이터가 부족하다. 해당 기사만으로는 자원봉사자가 이번 대회 운영의 핵심 성공 요인이라는 점을 납득하기 어렵다. 원활한 이해를 돕기 위해 자원봉사자 선발 과정에서의 경쟁률, 올림픽 및 패럴림픽 성별·연령별 분포, 그리고 자원봉사자 이탈률 등의 데이터를 시각적으로 보충해보았다. 지금부터 ‘젊고, 열정적인’ 대한민국의 이미지를 성공적으로 보여준 평창 동계 올림픽· 패럴림픽 자원봉사자를 구체적인 데이터를 통해 살펴보자.
        </P>
      </h5>
    </div>
